--- a/site/package.json
+++ b/site/package.json
@@ -19,5 +19,9 @@
   "dependencies": {
     "express": "^4.0.0",
     "express3-handlebars": "^0.5.0"
+  },
+  "devDependencies": {
+    "chai": "^1.9.1",
+    "mocha": "^1.20.1"
   }
 }
