--- a/site/package.json
+++ b/site/package.json
@@ -17,6 +17,7 @@
   "author": "yaolmh",
   "license": "MIT",
   "dependencies": {
+    "body-parser": "^1.3.0",
     "express": "^4.0.0",
     "express3-handlebars": "^0.5.0"
   },
