--- a/site/package.json
+++ b/site/package.json
@@ -19,7 +19,10 @@
   "dependencies": {
     "body-parser": "^1.3.0",
     "express": "^4.0.0",
-    "express3-handlebars": "^0.5.0"
+    "express3-handlebars": "^0.5.0",
+    "formidable": "^1.0.16",
+    "imagemagick": "^0.1.3",
+    "jquery-file-upload-middleware": "^0.1.2"
   },
   "devDependencies": {
     "chai": "^1.9.1",
