--- a/site/package.json
+++ b/site/package.json
@@ -18,7 +18,9 @@
   "license": "MIT",
   "dependencies": {
     "body-parser": "^1.3.0",
+    "cookie-parser": "^1.1.0",
     "express": "^4.0.0",
+    "express-session": "^1.2.1",
     "express3-handlebars": "^0.5.0",
     "formidable": "^1.0.16",
     "imagemagick": "^0.1.3",
