--- a/site/package.json
+++ b/site/package.json
@@ -24,7 +24,8 @@
     "express3-handlebars": "^0.5.0",
     "formidable": "^1.0.16",
     "imagemagick": "^0.1.3",
-    "jquery-file-upload-middleware": "^0.1.2"
+    "jquery-file-upload-middleware": "^0.1.2",
+    "nodemailer": "^0.6.5"
   },
   "devDependencies": {
     "chai": "^1.9.1",
