--- a/site/package.json
+++ b/site/package.json
@@ -18,13 +18,16 @@
   "license": "MIT",
   "dependencies": {
     "body-parser": "^1.3.0",
+    "cluster": "^0.7.7",
     "cookie-parser": "^1.1.0",
     "express": "^4.0.0",
+    "express-logger": "0.0.3",
     "express-session": "^1.2.1",
     "express3-handlebars": "^0.5.0",
     "formidable": "^1.0.16",
     "imagemagick": "^0.1.3",
     "jquery-file-upload-middleware": "^0.1.2",
+    "morgan": "^1.1.1",
     "nodemailer": "^0.6.5"
   },
   "devDependencies": {
