--- a/site/package.json
+++ b/site/package.json
@@ -27,6 +27,7 @@
     "formidable": "^1.0.16",
     "imagemagick": "^0.1.3",
     "jquery-file-upload-middleware": "^0.1.2",
+    "loadtest": "^0.2.11",
     "morgan": "^1.1.1",
     "nodemailer": "^0.6.5"
   },
