--- a/site/package.json
+++ b/site/package.json
@@ -28,10 +28,12 @@
     "imagemagick": "^0.1.3",
     "jquery-file-upload-middleware": "^0.1.2",
     "loadtest": "^0.2.11",
+    "mongoose": "^3.8.40",
     "morgan": "^1.1.1",
     "mysql": "^2.5.4",
     "nodemailer": "^0.6.5",
-    "sequelize": "^2.0.0-rc7"
+    "sequelize": "^2.0.0-rc7",
+    "session-mongoose": "^0.4.1"
   },
   "devDependencies": {
     "chai": "^1.9.1",
