--- a/site/package.json
+++ b/site/package.json
@@ -19,12 +19,14 @@
   "dependencies": {
     "body-parser": "^1.3.0",
     "cluster": "^0.7.7",
+    "connect-redis": "^2.2.0",
     "cookie-parser": "^1.1.0",
     "express": "^4.0.0",
     "express-logger": "0.0.3",
     "express-session": "^1.2.1",
     "express3-handlebars": "^0.5.0",
     "formidable": "^1.0.16",
+    "fs": "0.0.2",
     "imagemagick": "^0.1.3",
     "jquery-file-upload-middleware": "^0.1.2",
     "loadtest": "^0.2.11",
@@ -32,8 +34,11 @@
     "morgan": "^1.1.1",
     "mysql": "^2.5.4",
     "nodemailer": "^0.6.5",
+    "path": "^0.11.14",
+    "q": "^1.0.1",
     "sequelize": "^2.0.0-rc7",
-    "session-mongoose": "^0.4.1"
+    "session-mongoose": "^0.4.1",
+    "vhost": "^2.0.0"
   },
   "devDependencies": {
     "chai": "^1.9.1",
