--- a/site/package.json
+++ b/site/package.json
@@ -36,6 +36,7 @@
     "nodemailer": "^0.6.5",
     "path": "^0.11.14",
     "q": "^1.0.1",
+    "redis": "^0.12.1",
     "sequelize": "^2.0.0-rc7",
     "session-mongoose": "^0.4.1",
     "vhost": "^2.0.0"
