--- a/site/package.json
+++ b/site/package.json
@@ -20,7 +20,9 @@
     "body-parser": "^1.3.0",
     "cluster": "^0.7.7",
     "connect-redis": "^2.2.0",
+    "connect-rest": "^0.7.7",
     "cookie-parser": "^1.1.0",
+    "cors": "^2.5.3",
     "express": "^4.0.0",
     "express-logger": "0.0.3",
     "express-session": "^1.2.1",
@@ -37,6 +39,7 @@
     "path": "^0.11.14",
     "q": "^1.0.1",
     "redis": "^0.12.1",
+    "restler": "^3.2.2",
     "sequelize": "^2.0.0-rc7",
     "session-mongoose": "^0.4.1",
     "vhost": "^2.0.0"
