--- a/site/package.json
+++ b/site/package.json
@@ -17,6 +17,7 @@
   "author": "yaolmh",
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.5.0",
     "body-parser": "^1.3.0",
     "cluster": "^0.7.7",
     "connect-redis": "^2.2.0",
