--- a/site/package.json
+++ b/site/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "axios": "^0.5.0",
     "body-parser": "^1.3.0",
+    "bson": "^0.2.19",
     "cluster": "^0.7.7",
     "connect-redis": "^2.2.0",
     "connect-rest": "^0.7.7",
